chore: polish java code